@@ -1,5 +1,7 @@
 * Fri Jun 24 2005 Brendan O'Dea <bod@optus.net> 2.1.2
 - Don't resend IPCP while still in progress.
+- Ignore duplicate ACKs for IPCP.
+- Clear RADIUSIPCP for walled garden sessions on ACK.
 
 * Tue Jun 14 2005 Brendan O'Dea <bod@optusnet.com.au> 2.1.1
 - Add missing newline to backtrace macro.
